...
    progressView = UIProgressView(frame: CGRectMake(100, 100, 400, 40))
    progressView.progress = 0.0
    view.addSubview(progressView)
    view.addConstraint(.CenterX, forView: progressView)
    view.addConstraint(.CenterY, forView: progressView)
    deleteButton = UIButton(type: .System)
    deleteButton.setTitle("Delete", forState: .Normal)
    deleteButton.sizeToFit()
    deleteButton.addTarget(self, action: "deleteRegion", forControlEvents: UIControlEvents.TouchUpInside)
    view.addSubview(deleteButton)
    view.addConstraint(.CenterX, forView: deleteButton)
    view.addConstraints("V:[download]-10-[delete]-70-|", forViews: ["download": downloadButton, "delete": deleteButton])

...
    else {
      
      let downloadRegion = city != nil ? city : country
      nameLabel.text = "Download \(downloadRegion.getName()):"
      
      deleteButton.hidden = true
      downloadButton.setTitle("Download", forState: UIControlState.Normal)
      downloadButton.addTarget(self, action: "downloadRegion", forControlEvents: UIControlEvents.TouchUpInside)
    }
    nameLabel.sizeToFit()
    downloadButton.sizeToFit()
  }
  
...
