...
      if (backCardView != nil) {
        backCardView.removeFromSuperview()
        backCardView = nil
      }

      noElementsLabel.hidden = false
      noElementsLabel.text = "Loading..."
      noElementsLabel.sizeToFit()
    }
  }
  
  @IBAction func back() {
    self.tabBarController?.selectedIndex = 0
...
        },completion:nil)
    }
  }
  func setFrontCardViewFunc(frontCardView: ListingCardView) -> Void{
    
    self.frontCardView = frontCardView
    self.frontCardView.accessibilityIdentifier = "frontCard"
  }
  
  
  func popListingViewWithFrame(frame:CGRect) -> ListingCardView? {
    if(listingStack!.count == 0){
      return nil;
...
