...
/********** Strings **********/

/* About button text (should be short) */
"about" = "About";

/* Button text (should be short) */
"back" = "Back";

/* Button text (should be short) */
"cancel" = "Cancel";

/* Button which interrupts country download */
"cancel_download" = "Cancel Download";

/* Button which deletes downloaded country */
"delete" = "Delete";

/* Button to dismiss dialog forever */
"do_not_ask_me_again" = "Do not ask me again";

/* Button "do not interrupt download" if user touched actively downloading country */
"do_nothing" = "Continue";
...
/* View and button titles for accessibility */
"my_position" = "My Position";

/* Settings/Downloader - 3G download warning dialog title */
"no_wifi_ask_cellular_download" = "No WiFi connection detected. Would you like to use cellular data (GPRS, EDGE, 3G or LTE) to download %@?";

"ok" = "OK";

/* not used? Search View - Location is disabled by user warning text */
"enable_location_services" = "Please enable Location Services";

/* Settings/Downloader - No free space dialog message */
"free_disk_space_for_country_x" = "Please free some space on your device first in order to download %@";
...
"never" = "Never";

/* Leave Review dialog - Complain button (goes to support site) */
"report_an_issue" = "Report an issue";

/* View and button titles for accessibility */
"search" = "Search";

/* Search box placeholder text */
"search_map" = "Search Map";

/* Settings/Downloader - info for not downloaded country */
"touch_to_download" = "Touch to download";
...
"country_status_downloading" = "Downloading\n^\n^";

/* Button text for the button at the center of the screen when the country is not downloaded */
"country_status_download" = "Download Map\n(^ ^)";

/* Button text for the button at the center of the screen when the country is not downloaded and the size should not be shown */
"country_status_download_without_size" = "Download Map";

/* Button text for the button at the center of the screen when the country is not downloaded */
"country_status_download_without_routing" = "Download map\nwithout routing (^ ^)";

/* Message to display at the center of the screen when the country download has failed */
"country_status_download_failed" = "Downloading has failed";
...
"search_mode_nearme" = "Near Me";

/* Do search in current viewport only */
"search_mode_viewport" = "On the Screen";

/* Search Suggestion */
"food" = "Food and drinks";

/* Search Suggestion */
"transport" = "Transportation";

/* Search Suggestion */
"fuel" = "Gas";

/* Search Suggestion */
"parking" = "Parking";
...
/* Search Suggestion */
"shop" = "Shopping";

"hotel" = "Accommodation";

/* Search Suggestion */
"tourism" = "Attractions";

/* Search Suggestion */
"entertainment" = "Entertainment";

/* Search Suggestion */
"atm" = "ATM";
...
"length" = "Length";

"share_my_location" = "Share My Location";

"menu_search" = "Search";

/* Settings screen: "Map" category title */
"prefs_group_map" = "Map";

/* Settings screen: "Miscellaneous" category title */
"prefs_group_misc" = "Miscellaneous";

"prefs_group_route" = "Navigation";
...
/* download failed */
"download_failed" = "download has failed";

/* get the map */
"get_the_map" = "Get the map";

"save" = "Save";

"edit_description_hint" = "Your descriptions (text or html)";

"new_group" = "new group";

"create" = "create";
...
"rate_alert_four_star_message" = "Thank you, we will do our best!";

"rate_alert_less_than_four_star_message" = "Any idea how we can make it better?";

"categories" = "Categories";

"history" = "History";

"next_turn_then" = "Then";

"closed" = "Closed";

"back_to" = "Back to %@";
...
