...
    case METRO_ENTRANCE = 2393
    case TRAM_STOP = 2394

    var entityName: String {
      switch self {
      case .AIRPORT:
        return "Airports"
      case .TRAIN_STATION:
        return "Train stations"
      case .BUS_STATION:
        return "Bus stations"
      case .METRO_STATION:
        return "Metro stations"
      case .TRAM_STOP:
        return "Tram stations"
      case .FERRY_TERMINAL:
        return "Ferry terminals"
...
