...
//        
//        if let openUrl = openUrl as? String {
//          if fromBackground {
//            UIApplication.sharedApplication().openURL(NSURL(string: openUrl)!)
//          } else {
//            sharedInstance.openUrl = openUrl
//            let alert = UIAlertView(title: "", message: message, delegate: sharedInstance, cancelButtonTitle: "No thanks", otherButtonTitles: "Read more")
//            alert.show()
//          }
//        }
//      }
//    }
//    
...
