...
  var countryLists = [(String, [Region])]()
  var worldAreaImageSet = Set<String>()
  
  override func viewDidLoad() {
    super.viewDidLoad()

    navigationItem.title = "Countries"
    let mapButton = UIBarButtonItem(image: UIImage(named: "maps_icon"), style: .Plain, target: self, action: #selector(navigateToMap))
    mapButton.accessibilityLabel = "Map"
    let searchButton = UIBarButtonItem(barButtonSystemItem: .Search, target: self, action: #selector(navigateToSearch))
    navigationItem.rightBarButtonItems = [searchButton, mapButton]

    if TripfingerAppDelegate.mode != TripfingerAppDelegate.AppMode.TEST {
      refreshControl.addTarget(self, action: #selector(loadCountryLists), forControlEvents: .ValueChanged)
      tableView.addSubview(refreshControl)
    }
...
